Task 02/k8s/wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
spec:
  selector:
    app: wordpress
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
